--- a/2021_02_22_VBA.md
+++ b/2021_02_22_VBA.md
@@ -1,5 +1,6 @@
 # summary-learned-from-work
-1. 「オプション」設定
+## 1. 「オプション」設定
+
  「ツール　> オプション」
 
 (1) 変数の宣言を強制する
@@ -9,7 +10,7 @@
 タブ問融　: 2
 
 
-2. Sub, Function
+## 2. Sub, Function
 (1) Sub : Return (X)
  
 (2) Fuction : Return (O)
@@ -19,7 +20,7 @@ Private Function funcEx(para1, para2)
 End Function
 
 
-3. 適度な命名規則
+## 3. 適度な命名規則
 (1) ファイルの定数
  Dim HS_FName As String '大文字　+ UnderBar
  Dim HS_WB As Workbook
@@ -33,7 +34,7 @@ End Function
  Dim outputBase_HS_10_Policy As String '重要な値は、明確に分かるように
  
  
-4. ScreenUpdating, Visible
+## 4. ScreenUpdating, Visible
  
  Application.ScreenUpdating = False
  Windows(HS_WB.Name).Visible = False
@@ -45,12 +46,12 @@ Main ...
  Application.DisplayAlerts = True
  
  
-5. シートレベルでは、「With」を利用
+## 5. シートレベルでは、「With」を利用
  With HS_WS
  
 =============================================================================
  
-100. Table利用
+## 100. Table利用
 (1) テーブルの宣言　: Table ListObject
 　　, テーブルの一番下の行に、新しい行を追加 : Table ListRows Add　
  
@@ -73,31 +74,31 @@ Main ...
   tblRowsCnt = tbl10.Range.Rows.Count
  
 
-110. Cell内の文字に、色を
+## 110. Cell内の文字に、色を
 　PS_WS_No.Cells.Font.ColorIndex = RGB(0, 0, 0)
 
  .Cells(pTargetRow, pTargetCol).Font.Color = RGB(255, 0, 0)
 
 
-120. Merge Cell
+## 120. Merge Cell
  Set hCommandCell = .Range("P" & (hFindRow - 2)).MergeArea(1, 1)
  
 
-130. Cell Value Replace
+## 130. Cell Value Replace
  ' vbLf
  hCommandCell.Value = Replace(hCommandCell.Value, "move 1 before 2" & vbLf, "")
  
  
-140. Array LBound UBound (Min Count, Max Count)
+## 140. Array LBound UBound (Min Count, Max Count)
  For i = LBound(pSplitOldItemsArray) To UBound(pSplitOldItemsArray)
  
  
-150. Array Item Length
+## 150. Array Item Length
  Len(pSplitOldItemsArray(i))
  
 =============================================================================
  
-199.
+## 199.
 Private Function SplitEx(Expression, ParamArray Delimiter() As Variant) As Variant
     Dim v       As Variant          '// 配列要素
     Dim i       As Integer          '// ループカウンタ
@@ -156,7 +157,7 @@ End Function
 
 =============================================================================
 
-200. Make Directory
+## 200. Make Directory
 TODAY_OUTPUT_DIR = OUTPUT_DIR & "\" & Format(Date, "YYYYMMDD")
     If Dir(TODAY_OUTPUT_DIR, vbDirectory) = "" Then
       MkDir TODAY_OUTPUT_DIR
@@ -182,7 +183,7 @@ TODAY_OUTPUT_DIR = OUTPUT_DIR & "\" & Format(Date, "YYYYMMDD")
 End If
  
  
-210. Text File Row Data -> Excel Sheet
+## 210. Text File Row Data -> Excel Sheet
 
 With CS_WS
  '[1] TTL -> Sheet in CS
@@ -198,11 +199,11 @@ j = j + 1
  Close #rNum
  
  
-220. 探す値の一部があるのか
+## 220. 探す値の一部があるのか
 　.Range("D51").Replace "$HOSTIP", .Range("E24").Value, xlPart
  
  
-230. For文をもっと早く
+## 230. For文をもっと早く
  For h = HS_startRow To HS_lastRow
   ...
   h = h + 11
